--- a/signUp.html
+++ b/signUp.html
@@ -1,74 +1,1 @@
-<html lang="en">
-   <head>
-      <meta charset="utf-8">
-      <title>Sign Up</title>
-      <link rel="stylesheet" href="css/signUp.css">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   </head>
-   <body>
-      <div class="text-center">
-         <a href="javascript:void(0);"> <img width="" src="images/logo.png" alt=""></a>
-      </div>
-      <div class="sign-up-Wrapper" >
-         <div class="container">
-            <div class="row">
-               <h1 class="col-md-4 col-md-offset-4 well signUp-title">Sign Up</h1>
-            </div>
-            <div class="row">
-               <div class="col-md-4 col-md-offset-4 well">
-                  <form action="">
-                     <div class="form-row ">
-                        <div class="form-group col-md-6">
-                           <label for="firstName">First Name</label>
-                           <input type="text" class="form-control" id="firstName" placeholder="first Name">
-                        </div>
-                        <div class="form-group col-md-6">
-                           <label for="lastName">Last Name</label>
-                           <input type="text" class="form-control" id="lastName" placeholder="last Name">
-                        </div>
-                     </div>
-                     <div class="form-row ">
-                        <div class="form-group col-md-12">
-                           <label for="emailAddress">Email</label>
-                           <input type="email" class="form-control" id="emailAddress" placeholder="email address">
-                        </div>
-                     </div>
-                     <div class="form-row ">
-                        <div class="form-group col-md-12">
-                           <label for="password">Password</label>
-                           <input type="password" class="form-control" id="password" placeholder="password">
-                        </div>
-                     </div>
-                     <div class="form-row ">
-                        <div class="form-group col-md-12 ">
-                           <label for="Country">Country</label>
-                           <select id="Country" class="form-control">
-                              <option selected>Kuwait</option>
-                              <option>UAE</option>
-                              <option>Bahrain</option>
-                              <option>Qatar</option>
-                           </select>
-                        </div>
-                     </div>
-                     <div class="form-row ">
-                        <div class="form-group col-md-12">
-                           <div class="form-check form-check-inline">
-                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="maleCheckBox" value="Male">
-                              <label class="form-check-label " for="maleCheckBox">Male </label>
-                              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="femaleCheckBox" value="Female">
-                              <label class="form-check-label " for="femaleCheckBox">Female </label>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="form-row ">
-                        <div class="form-group col-lg-12 text-center">
-                           <button type="submit" class="btn btn-info btn-lg btn-block">Sign Up</button>
-                        </div>
-                     </div>
-                  </form>
-               </div>
-            </div>
-         </div>
-      </div>
-   </body>
-</html>
+<html lang="en"> <head> <meta charset="utf-8"> <title>Sign Up</title> <link rel="stylesheet" href="css/signUp.css"> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> </head> <body> <div class="text-center"> <a href="javascript:void(0);"> <img width="" src="images/logo.png" alt=""></a> </div><div class="sign-up-Wrapper" > <div class="container"> <div class="row"> <h1 class="col-md-4 col-md-offset-4 well signUp-title">Sign Up</h1> </div><div class="row"> <div class="col-md-4 col-md-offset-4 well"> <form action=""> <div class="form-row "> <div class="form-group col-md-6"> <label for="firstName">First Name</label> <input type="text" class="form-control" id="firstName" placeholder="first Name"> </div><div class="form-group col-md-6"> <label for="lastName">Last Name</label> <input type="text" class="form-control" id="lastName" placeholder="last Name"> </div></div><div class="form-row "> <div class="form-group col-md-12"> <label for="emailAddress">Email</label> <input type="email" class="form-control" id="emailAddress" placeholder="email address"> </div></div><div class="form-row "> <div class="form-group col-md-12"> <label for="password">Password</label> <input type="password" class="form-control" id="password" placeholder="password"> </div></div><div class="form-row "> <div class="form-group col-md-12 "> <label for="Country">Country</label> <select id="Country" class="form-control"> <option selected>Kuwait</option> <option>UAE</option> <option>Bahrain</option> <option>Qatar</option> </select> </div></div><div class="form-row "> <div class="form-group col-md-12"> <div class="form-check form-check-inline"> <input class="form-check-input" type="radio" name="inlineRadioOptions" id="maleCheckBox" value="Male"> <label class="form-check-label " for="maleCheckBox">Male </label> <input class="form-check-input" type="radio" name="inlineRadioOptions" id="femaleCheckBox" value="Female"> <label class="form-check-label " for="femaleCheckBox">Female </label> </div></div></div><div class="form-row "> <div class="form-group col-lg-12 text-center"> <button type="submit" class="btn btn-info btn-lg btn-block">Sign Up</button> </div></div></form> </div></div></div></div></body></html>
