--- a/products.html
+++ b/products.html
@@ -658,7 +658,7 @@
             </div>
             <div class="col-md-9 products-collection">
                <div class="row">
-                  <div class=" col-md-4">
+                  <div class="col-sm-12 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -714,7 +714,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class=" col-md-4">
+                  <div class="col-sm-12 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -771,7 +771,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class=" col-md-4">
+                  <div class="col-sm-12 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -828,7 +828,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class=" col-md-4">
+                  <div class="col-sm-12 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -885,7 +885,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class=" col-md-4">
+                  <div class="col-sm-12 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -941,7 +941,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class=" col-md-4">
+                  <div class="col-sm-12 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -997,7 +997,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class=" col-md-4">
+                  <div class="col-sm-12 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -1053,7 +1053,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class=" col-md-4">
+                  <div class="col-sm-12 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -1109,7 +1109,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class=" col-md-4">
+                  <div class="col-sm-12 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
