--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
          <!-- **************************************************************  -->
       </header>
       <!-- ********************* CAROUSELE START ************************  -->
-      <div class="container">
+      <!-- <div class="container">
          <div class="row row-centered">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                <!-- Indicators -->
@@ -580,10 +580,10 @@
                </a>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- **************************************************************  -->
       <!-- ********************* Featured Collection ********************  -->
-      <div id="firstWrapper">
+      <!-- <div id="firstWrapper">
          <div id="featuredCollection" class="collectionWrapper">
             <div class="section-header text-center">
                <h2 class="h1 section-header">Featured Collections</h2>
@@ -626,10 +626,10 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- **************************************************************  -->
       <!-- ********************* Popular Adds ***************************  -->
-      <div id="secondWrapper">
+      <!-- <div id="secondWrapper">
          <div id="popularAdds" class="popularAdds">
             <div class="section-header text-center">
                <h2 class="h1 section-header">Popular Adds</h2>
@@ -919,10 +919,10 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- **************************************************************  -->
       <!-- ********************* Footer *********************************  -->
-      <footer class="footer">
+      <!-- <footer class="footer"> -->
          <div class="container-fluid">
             <div class="row">
               <div class="col-md-10 col-md-offset-1">
@@ -970,7 +970,7 @@
       </footer>
       <!-- **************************************************************  -->
       <!-- ********************* Login Modal ***************************  -->
-      <div id="loginModal" class="modal fade">
+      <!-- <div id="loginModal" class="modal fade"> -->
          <div class="loginModal-content">
             <div class="loginModal-header">
                <button type="button" class="close" data-dismiss="modal">×</button>
