--- a/index.html
+++ b/index.html
@@ -137,9 +137,15 @@
          </div>
          <!-- **************************************************************  -->
          <!-- *********************** LAST_BAR  ****************************  -->
-         <div class="lastBar">
+         <div class="lastBar container-fluid">
             <nav class="navbar">
-               <div class="collapse navbar-collapse js-navbar-collapse">
+              <div class="navbar-header">
+   <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#last-navbar">
+     <span class="fa fa-bars"></span>
+   </button>
+
+ </div>
+               <div class="collapse navbar-collapse" id="last-navbar">
                   <ul class="nav navbar-nav">
                      <li class="dropdown mega-dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Men</span></a>
@@ -531,7 +537,7 @@
          </div>
          <!-- **************************************************************  -->
       </header>
-  
+
       <script src="js/app.js"></script>
    </body>
 </html>
