--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>E-Commerce</title>
       <meta name="description" content=" E-Commerce Website">
       <link rel="stylesheet" href="css/style.css">
@@ -120,8 +121,7 @@
                               </select>
                            </div>
                            <div class="col-sm-3" >
-                              <!-- <button type="button" class="btn btn-info btn-md pull-right post-btn">
-                              <span class="glyphicon glyphicon-upload"></span> Post Free Ad</button> -->
+
                               <a href="#swym-wishlist" class="wishlist">
                                 <i aria-hidden="true" focusable="false" role="presentation" class="fa fa-heart-o"></i>
                               </a>
@@ -140,11 +140,11 @@
 
             <nav class="navbar">
               <div class="lastBar container-fluid">
-              <div class="navbar-header">
+              <!-- <div class="navbar-header">
                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#last-navbar">
                  <span class="fa fa-bars"></span>
                </button>
-               </div>
+               </div> -->
                <div class="collapse navbar-collapse" id="last-navbar">
                   <ul class="nav navbar-nav">
                      <li class="dropdown mega-dropdown">
