--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
          <!-- ******************** TOP_BAR  ******************************  -->
          <nav class="topBar">
-            <div class="container">
+            <div class="container-fluid">
                <ul class="list-inline pull-left hidden-sm hidden-xs">
                   <li><a href="mobileapp.html" ><i class="fa fa-download"></i>  Download Mobile App </a></li>
                </ul>
@@ -51,7 +51,7 @@
                   </li>
                   <li class="dropdown">
                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="false">
-                     <span class="hidden-xs">العربيه</span>
+                     <span class="">العربيه</span>
                      </a>
                      <ul class="dropdown-menu w-100" role="menu">
                         <li>
@@ -65,15 +65,15 @@
          <!-- ***********************************************************  -->
          <!-- *********************** MIDDEL_BAR  ***********************  -->
          <div class="middleBar">
-            <div class="container">
+            <div class="container-fluid">
                <div class="row display-table">
                   <div class="col-sm-3 vertical-align text-left hidden-xs">
                      <a href="javascript:void(0);"> <img width="" src="images/logo.png" alt=""></a>
                   </div>
-                  <div class="col-sm-9 vertical-align ">
+                  <div class="col-sm-9 col-md-9 vertical-align ">
                      <form>
                         <div class="row ">
-                           <div class="col-sm-7">
+                           <div class="col-sm-7 col-md-4">
                               <div class="input-group">
                                  <input type="text" name="keyword" class="form-control input-md" placeholder="Search for ...">
                                  <span class="input-group-btn">
@@ -81,7 +81,7 @@
                                  <span class="glyphicon glyphicon-search"></span></button></span>
                               </div>
                            </div>
-                           <div class="col-sm-2">
+                           <div class="col-sm-2 col-md-3">
                               <select class="form-control input-md" name="category">
                                  <option value="all">All Categories</option>
                                  <optgroup label="Mens">
@@ -120,7 +120,7 @@
                                  </optgroup>
                               </select>
                            </div>
-                           <div class="col-sm-3" >
+                           <div class="col-sm-3 col-md-2" >
 
                               <a href="#swym-wishlist" class="wishlist">
                                 <i aria-hidden="true" focusable="false" role="presentation" class="fa fa-heart-o"></i>
@@ -140,11 +140,11 @@
 
             <nav class="navbar">
               <div class="lastBar container-fluid">
-              <!-- <div class="navbar-header">
+              <div class="navbar-header">
                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#last-navbar">
                  <span class="fa fa-bars"></span>
                </button>
-               </div> -->
+               </div>
                <div class="collapse navbar-collapse" id="last-navbar">
                   <ul class="nav navbar-nav">
                      <li class="dropdown mega-dropdown">
