--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                  </optgroup>
                               </select>
                            </div>
-                           <div class="col-sm-3 col-md-2" >
+                           <div class="col-sm-3 col-md-2 hidden-xs" >
 
                               <a href="#swym-wishlist" class="wishlist">
                                 <i aria-hidden="true" focusable="false" role="presentation" class="fa fa-heart-o"></i>
