--- a/index.html
+++ b/index.html
@@ -141,9 +141,10 @@
             <nav class="navbar">
               <div class="lastBar container-fluid">
               <div class="navbar-header">
-               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#last-navbar">
-                 <span class="fa fa-bars"></span>
-               </button>
+                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#last-navbar">
+                   <span class="fa fa-bars"></span>
+                 </button>
+                 <!-- <a href="" class="visible-xs">Collection Category</a> -->
                </div>
                <div class="collapse navbar-collapse" id="last-navbar">
                   <ul class="nav navbar-nav">
