--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
          <!-- ***********************************************************  -->
          <!-- *********************** MIDDEL_BAR  ***********************  -->
          <div class="middleBar">
-            <div class="container-fluid">
+            <div class="container">
                <div class="row display-table">
                   <div class="col-sm-3 vertical-align text-left hidden-xs">
                      <a href="javascript:void(0);"> <img width="" src="images/logo.png" alt=""></a>
@@ -149,7 +149,7 @@
                <div class="collapse navbar-collapse" id="last-navbar">
                   <ul class="nav navbar-nav">
                      <li class="dropdown mega-dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Men</span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Men</span></a>
                         <ul class="dropdown-menu mega-dropdown-menu">
                            <li class="col-sm-2">
                               <ul>
@@ -211,7 +211,7 @@
                               </div>
                            </li>
                         </ul>
-                     </li>
+                     </li><li role="separator" class="divider"></li>
                      <li class="dropdown mega-dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Women</span></a>
                         <ul class="dropdown-menu mega-dropdown-menu">
@@ -275,7 +275,7 @@
                               </div>
                            </li>
                         </ul>
-                     </li>
+                     </li><li role="separator" class="divider"></li>
                      <li class="dropdown mega-dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Kids</span></a>
                         <ul class="dropdown-menu mega-dropdown-menu">
@@ -339,7 +339,7 @@
                               </div>
                            </li>
                         </ul>
-                     </li>
+                     </li><li role="separator" class="divider"></li>
                      <li class="dropdown mega-dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Electronics</span></a>
                         <ul class="dropdown-menu mega-dropdown-menu">
@@ -403,7 +403,7 @@
                               </div>
                            </li>
                         </ul>
-                     </li>
+                     </li><li role="separator" class="divider"></li>
                      <li class="dropdown mega-dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home & LifeStyle</span></a>
                         <ul class="dropdown-menu mega-dropdown-menu">
@@ -467,7 +467,7 @@
                               </div>
                            </li>
                         </ul>
-                     </li>
+                     </li><li role="separator" class="divider"></li>
                      <li class="dropdown mega-dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sports</span></a>
                         <ul class="dropdown-menu mega-dropdown-menu">
