--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
          <!-- ******************** TOP_BAR  ******************************  -->
          <nav class="topBar">
-            <div class="container-fluid">
+            <div class="container">
                <ul class="list-inline pull-left hidden-sm hidden-xs">
                   <li><a href="mobileapp.html" ><i class="fa fa-download"></i>  Download Mobile App </a></li>
                </ul>
@@ -67,13 +67,13 @@
          <div class="middleBar">
             <div class="container">
                <div class="row display-table">
-                  <div class="col-sm-3 vertical-align text-left hidden-xs">
+                  <div class="col-sm-3 col-md-2 vertical-align text-left hidden-xs">
                      <a href="javascript:void(0);"> <img width="" src="images/logo.png" alt=""></a>
                   </div>
-                  <div class="col-sm-9 col-md-9 vertical-align ">
+                  <div class="col-sm-9 col-md-10 vertical-align ">
                      <form>
                         <div class="row ">
-                           <div class="col-sm-7 col-md-6">
+                           <div class="col-sm-7 col-md-7">
                               <div class="input-group">
                                  <input type="text" name="keyword" class="form-control input-md" placeholder="Search for ...">
                                  <span class="input-group-btn">
@@ -137,15 +137,15 @@
          </div>
          <!-- **************************************************************  -->
          <!-- *********************** LAST_BAR  ****************************  -->
+        <div class="lastBar">
+         <nav class="navbar">
 
-            <nav class="navbar">
-              <div class="lastBar container-fluid">
               <div class="navbar-header">
                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#last-navbar">
                    <span class=" fa fa-bars">  </span>
                  </button>
                  <!-- <a href="" class="visible-xs">Collection Category</a> -->
-               </div>
+              </div>
                <div class="collapse navbar-collapse" id="last-navbar">
                   <ul class="nav navbar-nav">
                      <li class="dropdown mega-dropdown">
@@ -534,8 +534,9 @@
                      </li>
                   </ul>
                </div>
-              </div>
+
             </nav>
+              </div>
 
          <!-- **************************************************************  -->
       </header>
