--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
       </header>
 
       <!-- ********************* CAROUSELE START ************************  -->
-      <div class="container-fluid">
+      <div class="container">
          <div class="row row-centered">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
                <!-- Indicators -->
