--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                      </a>
                      <ul class="dropdown-menu w-100" role="menu">
                         <li>
-                           <a href="#"><img src="images/Kuwait.png" class="mr-5" alt="">Kw</a>
+                           <a href="#"><img src="images/Kuwait.png" class="mr-5 img-responsive" alt="">Kw</a>
                         </li>
                         <li class="">
-                           <a href="#"><img src="images/Bahrain.png" class="mr-5" alt="">Bh</span></a>
+                           <a href="#"><img src="images/Bahrain.png" class="mr-5 img-responsive" alt="">Bh</span></a>
                         </li>
                         <li>
-                           <a href="#"><img src="images/Saudi Arabia.png" class="mr-5" alt="">Saudi</a>
+                           <a href="#"><img src="images/Saudi Arabia.png" class="mr-5 img-responsive" alt="">Saudi</a>
                         </li>
                         <li>
-                           <a href="#"><img src="images/UAE.png" class="mr-5" alt="">UAE</a>
+                           <a href="#"><img src="images/UAE.png" class="mr-5 img-responsive" alt="">UAE</a>
                         </li>
                      </ul>
                   </li>
