--- a/products.html
+++ b/products.html
@@ -545,7 +545,7 @@
 
       <div class="container products-container">
          <div class="row">
-            <div class="ol-md-3 filter-section ">
+            <div class="col-md-3 filter-section ">
                <div class="filter-header">Filter By </div>
                <div class="card">
                   <article class="card-group-item">
@@ -675,7 +675,7 @@
             </div>
             <div class="col-md-9 products-collection">
                <div class="row">
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-sm-6 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -731,7 +731,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-sm-6 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -788,7 +788,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-sm-6 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -845,7 +845,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-sm-6 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -902,7 +902,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-sm-6 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -958,7 +958,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-sm-6 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -1014,7 +1014,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-sm-6 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -1070,7 +1070,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-sm-6 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
@@ -1126,7 +1126,7 @@
                         </div>
                      </article>
                   </div>
-                  <div class="col-sm-12 col-md-4">
+                  <div class="col-sm-6 col-md-4">
                      <article class="card-wrapper">
                         <div class="image-holder">
                            <a href="productDetails.html" class="image-holder__link"></a>
