--- a/payment.html
+++ b/payment.html
@@ -551,7 +551,7 @@
          </div>
          <hr class=" col-md-10 col-md-offset-1">
          <div class="row ">
-            <div class="col-sm-12 col-md-10 col-md-offset-1 payment-col">
+            <div class="col-md-10 col-md-offset-1 payment-col">
                <table class="table">
                   <thead>
                      <tr>
@@ -570,7 +570,7 @@
                         <th><span class="item-desc-payment">Gucci Motor Jacket</span></th>
                         <th><span class="item-size-payment">M</span></th>
                         <th>
-                           <div class="col-md-8">
+                           <div class="">
                               <input type="number" class="form-control input-sm item-quantity-payment"placeholder="1" >
                            </div>
                         </th>
@@ -582,7 +582,7 @@
                         <th><span class="item-desc-payment">Women Casual Dress</span></th>
                         <th><span class="item-size-payment">L</span></th>
                         <th>
-                           <div class="col-md-8">
+                           <div class="">
                               <input type="number" class="form-control input-sm item-quantity-payment" placeholder="1">
                            </div>
                         </th>
@@ -659,15 +659,15 @@
             </div>
          </div>
          <hr class=" col-md-10 col-md-offset-1">
-         <div class="row">
-            <div class="col-sm-12 col-md-10 col-md-offset-1 payment-col">
+         <div class="row ">
+            <div class=" col-md-10 col-md-offset-1 payment-col">
 
                <!-- <button type="button" class="btn btn-success col-md-3" id="payment-back-btn">Continue Shopping</button> -->
                <!-- <button type="button" class="btn btn-info col-md-3" id="payment-checkout-btn">Proceed To Checkout</button> -->
-               <div class="col-sm-6 col-md-3" id="payment-back-btn">
+               <div class="col-md-4 " id="payment-back-btn">
                   <a href="products.html" class="btn  btn-success form-control"> Continue Shopping </a>
                </div>
-               <div class="col-sm-6 col-md-3" id="payment-checkout-btn">
+               <div class="col-md-4 .offset-md-4" id="payment-checkout-btn">
                   <a href="confirmation.html" class="btn  btn-info form-control"> Proceed To Checkout </a>
                </div>
             </div>
