--- a/payment.html
+++ b/payment.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <html lang="en">
-<html oncontextmenu="return false">
+<!-- <html oncontextmenu="return false"> -->
    <head>
       <meta charset="utf-8">
       <title>E-Commerce</title>
